# sdl2test

./: .gitignore  CMakeLists.txt  main.cpp  make-dbg.sh  make.bat  make.sh
source/: CMakeLists.txt  main.c
