cmake_minimum_required(VERSION 3.22)
project(chip8)
option(SDL_STATIC "" ON)
option(SDL_SHARED "" ON)
add_subdirectory(SDL2 EXCLUDE_FROM_ALL)
target_include_directories(SDL3-static PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/SDL2/include")
add_subdirectory(source)
install(TARGETS chip8 DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)